UPDATE Reply System

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ owner:
   job: "Hansung University"
   bio: "Software 설명"
   email: "kyoje11@naver.com"
-  disqus-shortname:
+  disqus-shortname: nesoy
   twitter: #username
   facebook: #username
   google:
