UPDATE AVATAR FONT Style

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ kramdown:
 ####################################
 #
 owner:
-  name: KWON YOUNG JAE
+  name: Kwon Young Jae
   avatar: YoungJae.jpg
   job: "Hansung University"
   bio: "Software 설명"
