--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: NESOY Blog
 email: kyoje11@naver.com
 description: NESOY Blog
-url: https://nesoy.github.io/
+url: https://github.com/nesoy
 
 
 #
