--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site wide configuration
 ####################################
 #
-title: NESOY Blog
+title: Young Jae
 email: kyoje11@naver.com
 description: NESOY Blog
 url: https://github.com/nesoy
