--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Young Jae
 email: kyoje11@naver.com
 description: NESOY Blog
-url: https://github.com/nesoy
+url: https://nesoy.github.io
 
 
 #
