--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   name: Kwon Young Jae
   avatar: YoungJae.jpg
   job: "Hansung University"
-  bio: "Software 설명"
+  bio: "Computer Engineering"
   email: "kyoje11@naver.com"
   disqus-shortname: nesoy
   twitter: #username
