Update Blog Search Post

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site wide configuration
 ####################################
 #
-title: Young Jae
+title: NESOY Blog
 email: kyoje11@naver.com
 description: NESOY Blog
 url: https://nesoy.github.io
