Update : Intellij Git Post

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ kramdown:
 owner:
   name: Kwon Young Jae
   avatar: YoungJae.jpg
-  job: "Hansung University"
-  bio: "Computer Engineering"
+  job: "Software developer"
+  bio: "Que Sera Sera"
   email: "kyoje11@naver.com"
   disqus-shortname: nesoy
   twitter: #username
