Update : Spring AOP

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ owner:
     ad-slot:
   bing-verify:
   github: nesoy
-  gitlab: nesoy
+  gitlab: #username
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: #username
   skype: #username
