Update : Cover Img & Font Color

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   email: "kyoje11@naver.com"
   disqus-shortname: nesoy
   twitter: #username
-  facebook: #username
+  facebook: nesoy92
   google:
     plus: #username
     analytics: UA-89701804-1
