--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ owner:
     plus: #username
     analytics: UA-89701804-1
     verify:
-    ad-client:
+    ad-client: ca-pub-1829817529831781
     ad-slot:
   bing-verify:
   github: nesoy
