--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 ####################################
 #
 title: NESOY Blog
-email: kyoje11@naver.com
+email: kyoje11@gmail.com
 description: NESOY Blog
 url: https://nesoy.github.io
 
