--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,10 @@ owner:
   github: nesoy
   gitlab: #username
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: #username
+  linkedin: young-jae-kwon-3514b3141
   skype: #username
   xing: #username
-  instagram: #username
+  instagram: youngjae_92
   lastfm: #username
   tumblr: #username
   pinterest: #username
