Change to email

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ owner:
   avatar: YoungJae.jpg
   job: "Software developer"
   bio: "Que Sera Sera"
-  email: "kyoje11@naver.com"
+  email: "kyoje11@gmail.com"
   disqus-shortname: nesoy
   twitter: #username
   facebook: nesoy92
