--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ font:
   global:
     # external: true will load this font family from host.
     external: true
-    family: Nanum Gothic
+    family: Do Hyeon
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
