--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: Nesoy Blog
-subtitle: Que Sera Sera
+subtitle: Que Sera Sera 🇰🇷
 description: Software Programmer
 author: 권영재
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
