--- a/_config.yml
+++ b/_config.yml
@@ -384,13 +384,13 @@ han: false
 #duoshuo_shortname:
 
 # Disqus
-disqus:
-  enable: true
-  shortname: nesoy
-  count: true
+#disqus:
+  #enable: true
+  #shortname: nesoy
+  #count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
-  hide: false
+  #hide: false
 
 # Hypercomments
 #hypercomments_id:
