Update Config & About

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # Site
 title: Nesoy Blog
 subtitle: Que Sera Sera
-description: Software Programmer
+description: Software Engineer
 author: 권영재
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: ko
