Update obsidian setting

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,1 +1,8 @@
-{}
+{
+  "cssTheme": "Minimal",
+  "accentColor": "",
+  "theme": "moonstone",
+  "showViewHeader": true,
+  "showRibbon": false,
+  "translucency": false
+}
