--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "cssTheme": "Minimal",
-  "accentColor": "",
+  "accentColor": "#4385be",
   "theme": "moonstone",
   "showViewHeader": true,
   "showRibbon": false,
