--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 public
 prof
 tsconfig.tsbuildinfo
-.obsidian/workspace.json
+content/.obsidian/workspace.json
 .quartz-cache
 private/
 .replit
