--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -3,5 +3,6 @@
   "promptDelete": false,
   "showInlineTitle": true,
   "newFileLocation": "folder",
-  "newFileFolderPath": ""
+  "newFileFolderPath": "blog",
+  "alwaysUpdateLinks": true
 }
